tests/baselines/reference/declarationEmitExpressionInExtends7.errors.txt
declarationEmitExpressionInExtends7.ts(1,30): error TS2304: Cannot find name 'SomeUndefinedFunction'.


==== declarationEmitExpressionInExtends7.ts (1 errors) ====
    export default class extends SomeUndefinedFunction {}
                                 ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'SomeUndefinedFunction'.
    